[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "plugshub-common"
version = "0.2.0"
description = "Shared fleet helpers (SaaS Constitution Appendix A) — the standard health/readiness probe shapes, identical across every service."
requires-python = ">=3.9"
authors = [{ name = "Da-tene" }]

[tool.setuptools]
packages = ["plugshub_common"]
